# reed-solomon-erasure

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: native.ex  reed_solomon_erasure.ex
native/reed_solomon_erasure/: Cargo.toml
native/reed_solomon_erasure/src/: lib.rs
test/: reed_solomon_erasure_test.exs
